# file_elf

./: .gitignore  Cargo.toml  README.md  base.toml  build.ps1  build.rs  makefile  sqlite3.db
app/: .gitignore
app/search-files-app/: package-lock.json  package.json
app/search-files-app/src/: App.js  SearchForm.js
app/search-files-app/src-tauri/: Cargo.toml  base.toml  tauri.conf.json
app/search-files-app/src-tauri/src/: lib.rs  main.rs  server.rs  shortcut.rs  tray.rs
app/search-files-app/src/elements/: Config.js  Help.js  NotificationToast.js  ResultItem.js  ResultsList.js  SearchForm.js
publish/: base.toml
src/: lib.rs  main.rs
src/backend/: mod.rs  writer.rs
src/cache/: cache.rs  create_test_data.sh  del_test_data.sh  hot_dir.rs  mod.rs  trie.rs
src/config/: mod.rs
src/db/: meta.rs  mod.rs  sqlite.rs
src/logger/: mod.rs
src/server/: api.rs  mod.rs  server.rs  util.rs
src/util/: errors.rs  mod.rs
