[package]
name = "file_elf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.0"
rusqlite = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
lazy_static = "*"
bincode = "*"
rocket = { version = "0.5.1", features = ["json"] }
strsim = "0.11.1"
regex = "1"
walkdir = "2.3"


[build-dependencies]

[build]
script = "build.rs"
