[package]
name = "file_elf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.0"
rusqlite = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
lazy_static = "*"
bincode = "*"
rocket = { version = "0.5.1", features = ["json"] }
strsim = "0.11.1"
regex = "1"
walkdir = "2.3"
log = "0.4"
fern = "0.6"
humantime = "2.1"
chrono="0.4"
tokio = { version = "1", features = ["full"] }

[build-dependencies]

[build]
script = "build.rs"

[features]
webserver = []
